@@ -1,14 +1,13 @@
 v0.7
 	ability to configure columns for playlist
 	ability to show column headings for sorting
-	popup notification on a new song (enable/disable, delay)
 
 Future:
+	popup notification on a new song (enable/disable, delay)
 	connect in background via socket.setblocking(0)
 	border around album art?
 	pref to autoplay when using 'replace'?
 	use threading for album art
-	retain selection after dnd
 	switch to pygtk's statusicon (2.10) and remove gnome-python dep
 		- then we can finally use skip_taskbar_hint since we will
 		  be able to reliably detect if the sysicon is displayed
