@@ -1,8 +1,9 @@
 v0.7 - Pending
 	+ Ability to search library by type (can be disabled in prefs)
 	+ Show larger image on left-click of cover art
-	+ Reduce pygmy's default polling time to 1 second
+	+ Reduce (pygmy's) default polling time to 1 second
 	+ Retain selection of browsed directories in library
+	+ Retain selection after drag-n-drop
 	+ Show previous instance of app if user tries to open a second
 	  instance [Mike Massonnet patch]
 	+ Add --version, --help; print usage
